# claude-exercises

./: .envrc  .gitignore  .mcp.json  CLAUDE.md  PRESENTATION.md  README.md  flake.nix  justfile  pyproject.toml
.claude/: settings.json
.claude/agents/: bug-fixer-tdd.md
.claude/skills/: project-structure.md
books-api/: .http  pyproject.toml
books-api/src/books_api/db/: books.py  borrowings.py  db.py  users.py
books-api/src/books_api/http/: __init__.py
books-api/src/books_api/http/books/: __init__.py  routes.py  schemas.py
books-api/src/books_api/http/borrowings/: __init__.py  routes.py  schemas.py
books-api/src/books_api/models/: __init__.py  books.py  borrowings.py  users.py
books-api/src/books_api/utils/: logging.py
books-api/test/: conftest.py
books-api/test/db/: test_books.py  test_borrowings.py
books-api/test/http/books/: test_routes.py  test_schemas.py
books-api/test/models/: test_users.py
books-mcp/: pyproject.toml
books-mcp/src/books_mcp/: __init__.py  db.py  server.py
books_api/: .http  README.md  pyproject.toml
books_api/src/books_api/: __init__.py  server.py
books_api/src/books_api/db/: __init__.py  books.py
books_api/src/books_api/http/: __init__.py
books_api/src/books_api/http/books/: routes.py  schemas.py
books_api/src/books_api/http/users/: __init__.py  routes.py  schemas.py
books_api/src/books_api/models/: __init__.py  books.py
books_api/src/books_api/utils/: __init__.py
books_api/test/db/: test_books.py  test_users.py
books_api/test/http/books/: test_routes.py  test_schemas.py
books_api/test/http/borrowings/: test_routes.py
books_api/test/http/users/: test_routes.py
books_api/test/models/: test_books.py  test_borrowings.py
books_api/test/utils/: test_logging.py
claude-exercises/01-claude-md/: README.md
claude-exercises/02-plan-usage/: README.md
claude-exercises/04-skills/: README.md
claude-exercises/05-mcps/: README.md
claude-exercises/06-third-party-mcps/: README.md
claude-exercises/07-context-management/: README.md
claude-workloads/00-basic-usage/: README.md
claude-workloads/01-claude-md/: README.md
claude-workloads/03-subagents/: README.md
claude-workloads/04-skills/: README.md
