[project]
name = "claude-arena"
version = "0.1.0"
description = "Monorepo for Claude Code workloads"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["books_api/src"]

[tool.hatch.build.targets.wheel]
packages = ["books_api/src/books_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["books_api/test"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = [".*test.*"]
