[project]
name = "claude-exercises"
version = "0.1.0"
description = "Monorepo for Claude Code workloads"
requires-python = ">=3.11"
dependencies = ["books-api"]

[tool.uv.sources]
books-api = { path = "books-api", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["books-api/src"]

[tool.hatch.build.targets.wheel]
packages = ["books-api/src/books_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["books-api/test"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = [".*test.*"]

[tool.coverage.run]
source = ["books-api/src/books_api"]
omit = ["*/test/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
