[project]
name = "books-mcp"
version = "0.1.0"
description = "MCP Server that provides book information"
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/books_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/books_mcp"]
